variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value int
int nbPas = 0
^Variables:4: error: not found: value nbPas
  nbPas = nbPas + 1
  ^Variables:12: error: not found: value nbPas
  recule(nbPas)
         ^