variables.Variables.scala.code
int nbPas = 0
while(!estSurBiscuit())
{
  nbPas = nbPas + 1
  avance()
}

if (estSurBiscuit())
{
  prendBiscuit()
  
  recule(nbPas)
  
  droite()
  droite()
  poseBiscuit()
}
